--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
             </ul>
         </nav>
     </header>
+
+    <!--- Banner Section-->
+    <section class="bgimage" id="banner">
+        <div class="container">
+            <div class="row">
+            <div class="welcome-msg">
+                <h2 class="name">Hey We are SherMer</h2>
+                <p class="role">a web developer</p>
+            </div>
+            </div>
+        </div>
+    </section>
+    
     
 </body>
 
