card section added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,29 @@
             </div>
         </div>
     </section>
+     <!----Project Cards-->
+     <div class="container">
+        <h2><u>These are some of my projects</u></h2>
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" ="Card image cap">
+                    <div class="card-block">
+                        <p class="card-text">Tribute Page</p>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col-sm-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png" alt="Card image cap">
+                    <div class="card-block">
+                        <p class="card-text">Random Quote Machine</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 </body>
