--- a/index.html
+++ b/index.html
@@ -23,22 +23,32 @@
 
     <!--- Banner Section-->
     <section class="bgimage" id="banner">
-        <div class="container">
-            <div class="row">
-                <div class="welcome-msg">
-                    <h2 class="name">Hey We are SherMer</h2>
-                    <p class="role">a web developer</p>
-                </div>
-            </div>
+
+        <div class="welcome-msg">
+            <h2 class="name">Hey We are SherMer</h2>
+            <p class="role">a web developer</p>
         </div>
+
     </section>
-     <!----Project Cards-->
-     <div class="container">
-        <h2><u>These are some of my projects</u></h2>
+    <!----Project Cards-->
+    <main class="container">
+        <h2>These are some of my projects</h2>
+
         <div class="row">
             <div class="col-sm-6">
                 <div class="card">
-                    <img class="card-img-top" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" ="Card image cap">
+                    <img class="card-img-top" alt="cards" width="400"
+                        src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg"="Card image cap">
+                    <div class="card-block">
+                        <p class="card-text">Tribute Page</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-6">
+                <div class="card">
+                    <img class="card-img-top" alt="cards" width="400"
+                        src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg"="Card image cap">
                     <div class="card-block">
                         <p class="card-text">Tribute Page</p>
                     </div>
@@ -47,14 +57,17 @@
             
             <div class="col-sm-6">
                 <div class="card">
-                    <img class="card-img-top" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png" alt="Card image cap">
+                    <img class="card-img-top" alt="cards" width="400"
+                        src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg"="Card image cap">
                     <div class="card-block">
-                        <p class="card-text">Random Quote Machine</p>
+                        <p class="card-text">Tribute Page</p>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+
+
+    </main>
 
 
 </body>
