contact section added/footer

--- a/index.html
+++ b/index.html
@@ -65,6 +65,41 @@
                 </div>
             </div>
         </div>
+        <!--contact page-->
+    <section class="Contact-me">
+        <div class="contact-header">
+            <h1>Let's work together...</h1>
+            <p><i>How do you take your coffee?</i></p>
+        </div>
+        <div id="social media">
+            <a href="https://facebook.com/" target="_blank">
+                <i class="fa fa-facebook-square" aria-hidden="true">Facebook</i>
+        </div>
+        <div>
+            <a href="https://github.com/" target="_blank">
+                <i class="fa fa-github-square" aria-hidden="true">Github</i>
+        </div>
+        <div>
+            <a href="https://twitter.com/" target="_blank">
+                <i class="fa fa-twitter-square" aria-hidden="true">Twitter</i>
+        </div>
+        <div>
+            <a href="https://gmail.com/" target="_blank">
+                <i class="fa fa-envelope" aria-hidden="true">Send Mail</i>
+        </div>
+        <div>
+            <a href="" target="_blank">
+                <i class="fa fa-mobile" aria-hidden="true">Call</i>
+        </div>
+
+        <!--footer-->
+        <footer>
+            <h1>**This is just a fake portfolio. All the projects and contact details given are not real.</h1>
+            <p>&#169 Created for freeCodeCamp <i class="fa fa-free-code-camp" aria-hidden="true"></i></p>
+        </footer>
+
+    </section>
+
 
 
     </main>
