--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -54,7 +55,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <div class="col-sm-6">
                 <div class="card">
                     <img class="card-img-top" alt="cards" width="400"
@@ -65,46 +66,51 @@
                 </div>
             </div>
         </div>
-        <!--contact page-->
-    <section class="Contact-me">
-        <div class="contact-header">
-            <h1>Let's work together...</h1>
-            <p><i>How do you take your coffee?</i></p>
-        </div>
-        <div id="social media">
-            <a href="https://facebook.com/" target="_blank">
-                <i class="fa fa-facebook-square" aria-hidden="true">Facebook</i>
-        </div>
-        <div>
-            <a href="https://github.com/" target="_blank">
-                <i class="fa fa-github-square" aria-hidden="true">Github</i>
-        </div>
-        <div>
-            <a href="https://twitter.com/" target="_blank">
-                <i class="fa fa-twitter-square" aria-hidden="true">Twitter</i>
-        </div>
-        <div>
-            <a href="https://gmail.com/" target="_blank">
-                <i class="fa fa-envelope" aria-hidden="true">Send Mail</i>
-        </div>
-        <div>
-            <a href="" target="_blank">
-                <i class="fa fa-mobile" aria-hidden="true">Call</i>
-        </div>
-
-        <!--footer-->
-        <footer>
-            <h1>**This is just a fake portfolio. All the projects and contact details given are not real.</h1>
-            <p>&#169 Created for freeCodeCamp <i class="fa fa-free-code-camp" aria-hidden="true"></i></p>
-        </footer>
-
-    </section>
-
-
 
     </main>
 
 
+    <!--contact page-->
+    <section class="contact-me">
+        <div class="contact-header">
+            <h1>Let's work together...</h1>
+            <p>How do you take your coffee?</p>
+        </div>
+        <div class="social-media">
+            <div id="social media">
+                <a href="https://facebook.com/">
+                    <i class="fa fa-facebook-square" aria-hidden="true">Facebook</i>
+            </div>
+            <div>
+                <a href="https://github.com/">
+                    <i class="fa fa-github-square" aria-hidden="true">Github</i>
+            </div>
+            <div>
+                <a href="https://twitter.com/">
+                    <i class="fa fa-twitter-square" aria-hidden="true">Twitter</i>
+            </div>
+            <div>
+                <a href="https://gmail.com/">
+                    <i class="fa fa-envelope" aria-hidden="true">Send Mail</i>
+            </div>
+            <div>
+                <a href="">
+                    <i class="fa fa-mobile" aria-hidden="true">Call</i>
+            </div>
+
+        </div>
+
+
+    </section>
+    <hr>
+    <!--footer-->
+
+    <footer>
+        <div>
+            <h1>**This is just a fake portfolio. All the projects and contact details given are not real.</h1>
+            <p>&#169 Created for freeCodeCamp <i class="fa fa-free-code-camp" aria-hidden="true"></i></p>
+        </div>
+    </footer>
 </body>
 
 </html>
